Sort by pocket's word count

--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
 <title>Cekopt</title>
 <h1>Your unread items on Pocket
+<p>Sorted by Pocket's claimed word count.
 <script src="./bundle.js"></script>
