--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,13 @@
 <title>Cekopt</title>
-<h1>Your unread items on Pocket
-<p>Sorted by Pocket's claimed word count.
+<h1>Your unread items on Pocket</h1>
+<p>Sorted by Pocket's claimed word count.</p>
+<div class="ordering-group">
+  <label>
+    <input type="radio" name="ordering" class="ordering" value="asc" checked>Ascending
+  </label>
+  <label>
+    <input type="radio" name="ordering" class="ordering" value="des">Descending
+  </label>
+</div>
+<div class="placeholder"></div>
 <script src="./bundle.js"></script>
